2010-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* utils.cpp (parseCommandLine): See #1542 since now user can enter
	differet command line parameters together with the path to ssh and
	scp clients in the global Preferences dialog, we need to parse
	these properly. This is especially important if file paths or
	arguments contain white space characters. Unit tests are in
	src/gui/unit_tests/parseCommandLineTest

2010-06-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* installer_commands_reg_user: all instllation commands should be
	on the single line in the configlet so they are sent to the
	firewall as one line. When these commands were on separate lines,
	linefeed characters between them appeared on the standard input of
	command "sudo -S" and broke installation process. This only
	happened in my tests when I ran GUI installer on windows and
	looked like some sort of a race. When all commands are on the one
	line the problem disappeared. Changed only configlets that used
	sudo as part of installation script.

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::pixNetworkZoneChecks):
	do not verify network zones of unprotected interfaces. Compiler
	does not allow the same obejct to be used as network zone of two
	different interfaces, which caused problems when a vlan parent
	interface has zone "Any". Vlan parent interface can not have ACLs
	attached to it and does not need any meaningful network zone, so
	"Any" is reasonable fill-in choice. However it coinsides with network
	zone of the "outside" interface which triggered this check.

	* SSHUnx.cpp (SSHUnx::stateMachine): SF bug 3020381: "Line failure
	should abort remote firewall install". If network connection is
	lost during firewall policy activation, policy installer should
	detect this, disconnect and declare installation session a
	failure.  Prior to v4.0.2, installer detected network failures
	during policy copy (done with scp) or when it could not connect to