@@ -182,11 +182,10 @@
 
   <li>
     <p>
-      See #1346. Mostly completed implementation of the viewer panel
-      that can be used to inspect generated firewall configuration files
-      from within the GUI. The panel can be opened using a button in the
-      mini-toolbar above firewall rules or as a page in the compile and
-      install wizard.
+      See #1346. Viewer panel that can be used to inspect generated
+      firewall configuration files from within the GUI. The panel can
+      be opened using a button in the mini-toolbar above firewall
+      rules or as a page in the compile and install wizard.
     </p>
   </li>
 
@@ -234,6 +233,13 @@
     </p>
   </li>
 
+
+  <li>
+    <p>
+      fixed SourceForge bug 3020761 "printing from command line causes
+      Segmentation fault". Fixes #1533
+    </p>
+  </li>
 
 </ul>
 
